--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,4 +38,9 @@
 
   </div>
 
+  <div class="misc1">misc1</div>
+  <div class="miscGlobal">miscGlobal</div>
+  <div class="miscApp">miscApp</div>
+  <div class="miscHome">miscHome</div>
+
 </div>
