--- a/src/app/+detail/detail.css
+++ b/src/app/+detail/detail.css
@@ -1,5 +1,9 @@
-.misc1 {
+.misc1, .miscDetail {
 	background-color: aqua;
 	border: solid red;
-	color: green;
+	color: red;
+}
+
+.hostBinding1 {
+	font-style: italic;
 }
