--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,5 +42,6 @@
   <div class="miscGlobal">miscGlobal</div>
   <div class="miscApp">miscApp</div>
   <div class="miscHome">miscHome</div>
+  <img src="../../images/test-image1.png" width="75px">
 
 </div>
