+detail module (e.g. detail.css) goes to 0.[chunkhash].chunk.js referred by webpack-runtime.[chunkhash].bundle.js When 0.[chunkhash].chunk.js change than webpack-runtime.[chunkhash].bundle.js also must change. ['webpack-runtime', 'polyfills', 'vendor'].reverse() in above CommonsChunkPlugin doesn't work!

--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -1,5 +1,6 @@
 .misc1, .miscAbout {
-	background-color: aqua;
-	border: solid red;
-	color: yellow;
+  background-color: aqua;
+  border: solid red;
+  color: yellow;
+  font-size: 19px;
 }
