--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,7 +38,8 @@
 
   </div>
 
-  <div class="misc1">misc1</div>
+
+  <div class="misc1">misc1 {{ birthday | date:'fullDate' }}</div>
   <div class="miscGlobal">miscGlobal</div>
   <div class="miscApp">miscApp</div>
   <div class="miscHome">miscHome</div>
