--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,30 +1,38 @@
 <form class="form-login" #loginForm="ngForm">
-  <h2 class="form-login-heading">Please sign in</h2>
+  <div  [hidden]="authService.isLoggedIn">
+    <h2 class="form-login-heading">Please sign in</h2>
 
-  <div class="form-group">
-    <label for="inputUser" class="sr-only">User</label>
-    <input type="text" id="inputUser" class="form-control" placeholder="User"
-           [(ngModel)]="authService.userName" name="userName" #userNameRef="ngModel"
-           required autofocus>
-    <div [hidden]="userNameRef.valid || userNameRef.pristine"
-         class="alert alert-danger">
-      User is required
+    <div class="form-group">
+      <label for="inputUser" class="sr-only">User</label>
+      <input type="text" id="inputUser" class="form-control" placeholder="User"
+             [(ngModel)]="authService.userName" name="userName" #userNameRef="ngModel"
+             required autofocus>
+      <div [hidden]="userNameRef.valid || userNameRef.pristine"
+           class="alert alert-danger">
+        User is required
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password"
-           [(ngModel)]="authService.password" name="password" #passwordRef="ngModel" required>
-    <div [hidden]="passwordRef.valid || passwordRef.pristine"
-         class="alert alert-danger">
-      Password is required
+    <div class="form-group">
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Password"
+             [(ngModel)]="authService.password" name="password" #passwordRef="ngModel" required>
+      <div [hidden]="passwordRef.valid || passwordRef.pristine"
+           class="alert alert-danger">
+        Password is required
+      </div>
     </div>
-  </div>
 
-  <button class="btn btn-lg btn-primary btn-block" (click)="login()"
-          [disabled]="!loginForm.form.valid" type="button"
-          *ngIf="!authService.isLoggedIn">Login</button>
-  <button class="btn btn-lg btn-primary btn-block" (click)="logout()"
-          *ngIf="authService.isLoggedIn" type="button">Logout</button>
+    <button class="btn btn-lg btn-primary btn-block" (click)="login()"
+            [disabled]="!loginForm.form.valid" type="button"
+            *ngIf="!authService.isLoggedIn">Login</button>
+    <button class="btn btn-lg btn-primary btn-block" (click)="logout()"
+            *ngIf="authService.isLoggedIn" type="button">Logout</button>
+  </div>
+  <div  [hidden]="!authService.isLoggedIn">
+    <h2 class="form-login-heading">Logged in with {{authService.userName}}</h2>
+    <br>
+    <button class="btn btn-lg btn-primary btn-block" (click)="logout()"
+            *ngIf="authService.isLoggedIn" type="button">Logout</button>
+  </div>
 </form>
