--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -6,6 +6,38 @@
   border-left: 5px solid #a94442; /* red */
 }
 
+/* Navigation link styles */
+//a:link - a normal, unvisited link
+//a:visited - a link the user has visited
+//a:hover - a link when the user mouses over it
+//a:active - a link the moment it is clicked
+nav {
+	a {
+		padding: 5px 10px;
+		text-decoration: none;
+		margin-right: 10px;
+		margin-top: 10px;
+		display: inline-block;
+		background-color: #ffe3db;
+		border-radius: 4px;
+	}
+
+	a:visited, a:link {
+		color: #000000;
+	}
+
+	a:hover {
+		color: #0000ff;
+		background-color: #ffff00;
+	}
+
+	a.active {
+		color: #1facff;
+		background-color: #ffff00;
+	}
+}
+
+/* animation */
 app * {
   animation-name: animateIn;
   animation-duration: 0.5s;
@@ -49,6 +81,7 @@ app * {
   /*}*/
 /*}*/
 
+/* some css tests */
 .misc1, .miscGlobal {
 	background-color: aqua;
 	border: solid red;
