--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -1,9 +1,24 @@
-.ng-valid[required], .ng-valid.required  {
-  border-left: 5px solid #42A948; /* green */
+//// Core variables and mixins
+//@import "../../node_modules/bootstrap/less/variables.less";
+//@import "../../node_modules/bootstrap/less/mixins.less";
+//
+//// Reset and dependencies
+//
+//// Core CSS
+//@import "../../node_modules/bootstrap/less/forms.less";
+
+@import (reference) "../../node_modules/bootstrap/less/bootstrap.less";
+
+.ng-valid[required], .ng-valid.required {
+	border-left: 5px solid #42A948; /* green */
+	.has-success.form-control;
+	.has-feedback.form-control;
 }
 
-.ng-invalid:not(form)  {
-  border-left: 5px solid #a94442; /* red */
+.ng-invalid:not(form) {
+	border-left: 5px solid #a94442; /* red */
+	.has-error.form-control;
+	.has-feedback.form-control;
 }
 
 /* Navigation link styles */
@@ -39,46 +54,46 @@ nav {
 
 /* animation */
 app * {
-  animation-name: animateIn;
-  animation-duration: 0.5s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-timing-function: ease-in;
-  animation-fill-mode: forwards;
-  opacity: 0;
+	animation-name: animateIn;
+	animation-duration: 0.5s;
+	animation-iteration-count: 1;
+	animation-direction: normal;
+	animation-timing-function: ease-in;
+	animation-fill-mode: forwards;
+	opacity: 0;
 }
 
 @keyframes animateIn {
-  from {
-    opacity: 0;
-    transform: translateX(-100%);
-    /*transform: rotate(0deg);*/
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-    /*transform: rotate(360deg);*/
-  }
+	from {
+		opacity: 0;
+		transform: translateX(-100%);
+		/*transform: rotate(0deg);*/
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
+		/*transform: rotate(360deg);*/
+	}
 }
 
 /** app {*/
-  /*animation-name: animateOut;*/
-  /*animation-duration: 0.5s;*/
-  /*animation-iteration-count: 1;*/
-  /*animation-direction: normal;*/
-  /*animation-timing-function: ease-out;*/
-  /*animation-fill-mode: forwards;*/
-  /*opacity: 1;*/
+/*animation-name: animateOut;*/
+/*animation-duration: 0.5s;*/
+/*animation-iteration-count: 1;*/
+/*animation-direction: normal;*/
+/*animation-timing-function: ease-out;*/
+/*animation-fill-mode: forwards;*/
+/*opacity: 1;*/
 /*}*/
 
 /*@keyframes fadeOut {*/
-  /*from {*/
-    /*opacity: 1;*/
-  /*}*/
-  /*to {*/
-    /*opacity: 0;*/
-    /*transform: translateY(100%);*/
-  /*}*/
+/*from {*/
+/*opacity: 1;*/
+/*}*/
+/*to {*/
+/*opacity: 0;*/
+/*transform: translateY(100%);*/
+/*}*/
 /*}*/
 
 /* some css tests */
