--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -1,12 +1,3 @@
-//// Core variables and mixins
-//@import "../../node_modules/bootstrap/less/variables.less";
-//@import "../../node_modules/bootstrap/less/mixins.less";
-//
-//// Reset and dependencies
-//
-//// Core CSS
-//@import "../../node_modules/bootstrap/less/forms.less";
-
 @import (reference) "../../node_modules/bootstrap/less/bootstrap.less";
 
 .ng-valid[required], .ng-valid.required {
@@ -43,11 +34,11 @@ nav {
 
 	a:hover {
 		color: #0000ff;
-		background-color: #ffff00;
+		background-color: #07ffb4;
 	}
 
 	a.active {
-		color: #1facff;
+		color: #ff720b;
 		background-color: #ffff00;
 	}
 }
