--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -11,6 +11,7 @@
            class="alert alert-danger">
         User is required
       </div>
+      <input-alerts [for]="userNameRef"></input-alerts>
     </div>
 
     <div class="form-group">
