--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -24,7 +24,7 @@ nav {
 		margin-right: 10px;
 		margin-top: 10px;
 		display: inline-block;
-		background-color: #ffe3db;
+		background-color: #ff8ce8;
 		border-radius: 8px;
 	}
 
@@ -39,7 +39,7 @@ nav {
 
 	a.active {
 		color: #ff720b;
-		background-color: #ffff00;
+		background-color: #fff991;
 	}
 }
 
