--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,27 +1,26 @@
 <form class="form-login" #loginForm="ngForm">
   <div  [hidden]="authService.isLoggedIn">
-    <h2 class="form-login-heading">Please sign in</h2>
+    <h2 class="form-login-heading">Login to Your Account</h2>
 
     <div class="form-group">
       <label for="inputUser" class="sr-only">User</label>
       <input type="text" id="inputUser" class="form-control" placeholder="User"
              [(ngModel)]="authService.userName" name="userName" #userNameRef="ngModel"
              required autofocus>
-      <div [hidden]="userNameRef.valid || userNameRef.pristine"
-           class="alert alert-danger">
-        User is required
-      </div>
-      <input-alerts [for]="userNameRef"></input-alerts>
+      <!--<div [hidden]="userNameRef.valid || userNameRef.pristine" class="alert alert-danger">-->
+        <!--User is required-->
+      <!--</div>-->
+      <alerts [for]="userNameRef"></alerts>
     </div>
 
     <div class="form-group">
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" id="inputPassword" class="form-control" placeholder="Password"
              [(ngModel)]="authService.password" name="password" #passwordRef="ngModel" required>
-      <div [hidden]="passwordRef.valid || passwordRef.pristine"
-           class="alert alert-danger">
-        Password is required
-      </div>
+      <!--<div [hidden]="passwordRef.valid || passwordRef.pristine" class="alert alert-danger">-->
+        <!--Password is required-->
+      <!--</div>-->
+      <alerts [for]="passwordRef"></alerts>
     </div>
 
     <button class="btn btn-lg btn-primary btn-block" (click)="login()"
