--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -1,3 +1,13 @@
+/**
+  CSS documentation:
+  http://www.w3schools.com/cssref/css_selectors.asp
+
+  LESS documentation:
+  http://lesscss.org/features/#parent-selectors-feature
+
+  https://css-tricks.com/forums/topic/apply-class-to-parent-if-child-div-contains-class/
+ */
+
 @import (reference) "../../node_modules/bootstrap/less/bootstrap.less";
 
 .ng-valid[required], .ng-valid.required {
