--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -12,14 +12,14 @@
 
 .ng-valid[required], .ng-valid.required {
 	border-left: 5px solid #42A948; /* green */
-	.has-success.form-control;
-	.has-feedback.form-control;
+	//.has-success.form-control;
+	//.has-feedback.form-control;
 }
 
 .ng-invalid:not(form) {
 	border-left: 5px solid #a94442; /* red */
-	.has-error.form-control;
-	.has-feedback.form-control;
+	//.has-error.form-control;
+	//.has-feedback.form-control;
 }
 
 /* Navigation link styles */
