--- a/src/app/gui/components/input-alerts.html
+++ b/src/app/gui/components/input-alerts.html
@@ -1,3 +1,5 @@
+<span class="glyphicon form-control-feedback"
+      [style.display]="internalIconDisplay" aria-hidden="true"></span>
 <div [hidden]="dontShowAlerts" class="alert alert-danger">
   <div *ngFor="let alert of alerts">{{alert}}</div>
 </div>
