--- a/src/app/login/login.less
+++ b/src/app/login/login.less
@@ -1,8 +1,16 @@
-.form-login {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
+@import (reference) "../../../node_modules/bootstrap/less/bootstrap.less";
+
+.form-logout {
+	max-width: 330px;
+	padding: 15px;
+	margin: 0 auto;
 }
+
+.form-login {
+  //.form-inline;
+  .form-logout;
+}
+
 .form-login .form-login-heading {
   margin-bottom: 10px;
 }
