--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,31 +1,34 @@
-<form class="form-login" #loginForm="ngForm">
-  <div  [hidden]="authService.isLoggedIn">
-    <h2 class="form-login-heading">Login to Your Account</h2>
+<div [hidden]="authService.isLoggedIn" style="margin: auto"
+     [style.display]="authService.isLoggedIn ? 'none' : 'table'">
+	<form class="form-login" #loginForm="ngForm">
+		<h2 class="form-login-heading">Login to Your Account</h2>
 
-    <div class="form-group">
-      <label class="control-label sr-only" for="inputUser">User</label>
-      <input type="text" id="inputUser" class="form-control" placeholder="User"
-             [(ngModel)]="authService.userName" name="userName" #userNameRef="ngModel"
-             required autofocus>
-      <!--<span class="glyphicon form-control-feedback" aria-hidden="true"></span>-->
-      <alerts [for]="userNameRef"></alerts>
-    </div>
+		<div class="form-group">
+			<label class="control-label sr-only" for="inputUser">User</label>
+			<input type="text" id="inputUser" class="form-control" placeholder="User"
+			       [(ngModel)]="authService.userName" name="userName" #userNameRef="ngModel"
+			       required autofocus>
+			<validations [for]="userNameRef"></validations>
+		</div>
 
-    <div class="form-group">
-      <label class="control-label sr-only" for="inputPassword">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password"
-             [(ngModel)]="authService.password" name="password" #passwordRef="ngModel" required>
-      <!--<span class="glyphicon form-control-feedback" aria-hidden="true"></span>-->
-      <alerts [for]="passwordRef"></alerts>
-    </div>
+		<div class="form-group">
+			<label class="control-label sr-only" for="inputPassword">Password</label>
+			<input type="password" id="inputPassword" class="form-control" placeholder="Password"
+			       [(ngModel)]="authService.password" name="password" #passwordRef="ngModel" required>
+			<validations [for]="passwordRef"></validations>
+		</div>
 
-    <button class="btn btn-lg btn-primary btn-block" (click)="login()"
-            [disabled]="!loginForm.form.valid" type="button">Login</button>
-  </div>
-  <div  [hidden]="!authService.isLoggedIn">
-    <h2 class="form-login-heading">Logged in with {{authService.userName}}</h2>
-    <br>
-    <button class="btn btn-lg btn-primary btn-block"
-            (click)="logout()" type="button">Logout</button>
-  </div>
-</form>
+		<div class="form-group">
+			<button class="btn btn-lg btn-primary btn-block" (click)="login()"
+			        [disabled]="!loginForm.form.valid" type="button">Login
+			</button>
+		</div>
+	</form>
+</div>
+<div [hidden]="!authService.isLoggedIn" class="form-logout">
+	<h2 class="form-login-heading">Logged in with {{authService.userName}}</h2>
+	<br>
+	<button class="btn btn-lg btn-primary btn-block"
+	        (click)="logout()" type="button">Logout
+	</button>
+</div>
