--- a/src/app/+detail/detail.component.html
+++ b/src/app/+detail/detail.component.html
@@ -9,4 +9,8 @@
 <div class="misc1">misc1</div>
 <div class="miscGlobal">miscGlobal</div>
 <div class="miscDetail">miscDetail</div>
+<address style="display: inline">
+  <strong>Bootstrap glyphicon test <i class="glyphicon glyphicon-glass"></i></strong><br>
+  <abbr title="Phone">P:</abbr> (123) 456-7890
+</address>
 <router-outlet></router-outlet>
