--- a/src/app/login/login.less
+++ b/src/app/login/login.less
@@ -1,14 +1,21 @@
 //@import (reference) "../../../node_modules/bootstrap/less/bootstrap.less";
 
+.form-container {
+  margin: auto;
+}
+
 .form-logout {
 	max-width: 330px;
-	padding: 15px;
 	margin: 0 auto;
 }
 
 .form-login {
   //.form-inline;
   .form-logout;
+}
+
+.form-login, .form-logout {
+  padding: 15px;
 }
 
 .form-login .form-login-heading {
