--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -99,9 +99,11 @@ app * {
 
 /* some css tests */
 .misc1, .miscGlobal {
+  background: url('../images/logout-25x25.png') no-repeat;
+  background-position: right;
 	background-color: aqua;
 	border: solid red;
-	color: green;
+	color: black;
 }
 
 .hostBinding1 {
