--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,7 +31,7 @@
   <div class="miscGlobal">miscGlobal</div>
   <div class="miscHome">miscHome</div>
   <img src="../../images/fullscreen-back2.jpg" height="20px">
-  [home] &lt;img src="../../images/fullscreen-back2.jpg"&gt; -> image-uri hash used!!!<br>
+  [home] <code>&lt;img src="../../images/fullscreen-back2.jpg"&gt;</code> -> image-uri hash used!!!<br>
   <img src="{{testImage1}}" height="20px">
   [home] using <code>public testImage1 = require('../../images/photoConfigOn1.jpg');</code> in @HomeComponent -> image-uri hash used!!!<br><br>
 
