--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
   <img src="../../images/fullscreen-back2.jpg" height="20px">
   [home] <code>&lt;img src="../../images/fullscreen-back2.jpg"&gt;</code> -> image-uri hash used!!!<br>
   <img src="{{testImage1}}" height="20px">
-  [home] using <code>public testImage1 = require('../../images/photoConfigOn1.jpg');</code> in @HomeComponent -> image-uri hash used!!!<br><br>
+  [home] <code>public testImage1 = require('../../images/photoConfigOn1.jpg');</code> -> image-uri hash used!!!<br><br>
 
   <address>
     <strong>[home] Twitter, Inc. <i class="glyphicon glyphicon-glass"></i></strong><br>
