--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -1,4 +1,6 @@
 /**
+	jisr-default-theme.less
+
   CSS documentation:
   http://www.w3schools.com/cssref/css_selectors.asp
 
@@ -7,7 +9,6 @@
 
   https://css-tricks.com/forums/topic/apply-class-to-parent-if-child-div-contains-class/
  */
-
 @import (reference) "../../node_modules/bootstrap/less/bootstrap.less";
 
 .ng-valid[required], .ng-valid.required {
@@ -99,8 +100,8 @@ app * {
 
 /* some css tests */
 .misc1, .miscGlobal {
-  background: url('../images/logout-25x25.png') no-repeat;
-  background-position: right;
+	background: url('../images/logout-25x25.png') no-repeat;
+	background-position: right;
 	background-color: aqua;
 	border: solid red;
 	color: black;
