--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -99,14 +99,10 @@ app * {
 /*}*/
 
 /* some css tests */
-.misc1, .miscGlobal {
+.miscGlobal, .misc1 {
 	background: url('../images/logout-25x25.png') no-repeat;
 	background-position: right;
 	background-color: aqua;
 	border: solid red;
 	color: black;
-}
-
-.hostBinding1 {
-	font-style: italic;
 }
