commented: 	* 9b. component level SASS-SCSS 	* 3b. global SASS-SCSS 	* 3c. global CSS(brought by SCSS patch)

--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -29,14 +29,21 @@
 //a:hover - a link when the user mouses over it
 //a:active - a link the moment it is clicked
 nav {
+	margin-top: 16px;
+	margin-bottom: 16px;
+
 	a {
-		padding: 5px 10px;
+		background-color: #00838F;
+		color: white;
+		padding: 8px 16px;
+		margin-top: 8px;
+		margin-right: 8px;
+		margin-bottom: 8px;
+		vertical-align: middle;
+		line-height: 1.25;
+		text-align: center;
 		text-decoration: none;
-		margin-right: 10px;
-		margin-top: 10px;
-		display: inline-block;
-		background-color: #ff8ce8;
-		border-radius: 8px;
+		border-radius: 4px;
 	}
 
 	a:visited, a:link {
@@ -49,8 +56,8 @@ nav {
 	}
 
 	a.active {
-		color: #ff720b;
-		background-color: #fff991;
+		color: #fff991;
+		background-color: #ff720b;
 	}
 }
 
