refactoring commented code

--- a/src/less/jisr-default-theme.less
+++ b/src/less/jisr-default-theme.less
@@ -9,18 +9,14 @@
 
   https://css-tricks.com/forums/topic/apply-class-to-parent-if-child-div-contains-class/
  */
-
 //@import (reference) "../../node_modules/bootstrap/less/bootstrap.less";
-
 // Core variables and mixins
 @import "../../node_modules/bootstrap/less/variables.less";
 @import "../../node_modules/bootstrap/less/mixins.less";
-
 // Reset and dependencies
 @import "../../node_modules/bootstrap/less/normalize.less";
 @import "../../node_modules/bootstrap/less/print.less";
 @import "../../node_modules/bootstrap/less/glyphicons.less";
-
 // Core CSS
 @import "../../node_modules/bootstrap/less/scaffolding.less";
 @import "../../node_modules/bootstrap/less/type.less";
@@ -104,25 +100,25 @@ app * {
 	}
 }
 
-/** app {*/
-/*animation-name: animateOut;*/
-/*animation-duration: 0.5s;*/
-/*animation-iteration-count: 1;*/
-/*animation-direction: normal;*/
-/*animation-timing-function: ease-out;*/
-/*animation-fill-mode: forwards;*/
-/*opacity: 1;*/
-/*}*/
+//app * {
+//	animation-name: animateOut;
+//	animation-duration: 0.5s;
+//	animation-iteration-count: 1;
+//	animation-direction: normal;
+//	animation-timing-function: ease-out;
+//	animation-fill-mode: forwards;
+//	opacity: 1;
+//}
 
-/*@keyframes fadeOut {*/
-/*from {*/
-/*opacity: 1;*/
-/*}*/
-/*to {*/
-/*opacity: 0;*/
-/*transform: translateY(100%);*/
-/*}*/
-/*}*/
+//@keyframes animateOut {
+//	from {
+//		opacity: 1;
+//	}
+//	to {
+//		opacity: 0;
+//		transform: translateY(100%);
+//	}
+//}
 
 /* some css tests */
 .miscGlobal, .misc1 {
