--- a/src/app/+detail/detail.component.html
+++ b/src/app/+detail/detail.component.html
@@ -12,10 +12,10 @@
 <address style="display: inline">
 	<strong>Bootstrap glyphicon test <i class="glyphicon glyphicon-glass"></i></strong><br>
 	<abbr title="Phone">P:</abbr> (123) 456-7890
-</address><br><br>
+</address><br><br><br>
 <div>
   <a [routerLink]=" ['./child-detail'] ">
     Child Detail
   </a>
-</div><br>
+</div><br><br>
 <router-outlet></router-outlet>
